업데이트 체크 0.1

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Unsplash</string>
+    <string name="msg_force_update">필수 업데이트가 필요합니다.</string>
+    <string name="msg_update">업데이트가 있습니다.</string>
+    <string name="negative_btn">싫어요</string>
+    <string name="positive_btn">좋아요</string>
 </resources>
