--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,7 @@
     <string name="positive_btn">좋아요</string>
     <string name="permission_denied">권한이 없으면 앱을 이용하실 수 없습니다.</string>
     <string name="permission_message_external_storage">앱 업데이트 및 사진 저장 시 필요한 권한입니다.<br/>권한이 없으면 앱을 이용하실 수 없습니다.</string>
-    <string name="terminate_app">앱 종료</string>
+    <string name="open_settings">설정으로 이동</string>
+    <string name="terminate">종료</string>
+    <string name="msg_request_permission">권한 요청</string>
 </resources>
